# networking-ovn

./: .coveragerc  .gitignore  .gitreview  .pylintrc  .stestr.conf  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  LINKS.rst  README.rst  TESTING.rst  TODO.rst  Vagrantfile  lower-constraints.txt  openstack-common.conf  plugin.spec  requirements.txt  run_neutorn_server  setup.cfg  test-requirements.txt  tox.ini
devstack/: README.rst  computenode-local.conf.sample  db-local.conf.sample  devstackgatekuryrrc  devstackgatenativel3rc  devstackgatenativeservicesrc  devstackgaterc  devstackgaterc latest-release  local.conf.sample  network_utils.sh  override-defaults  ovn-octavia-provider.conf.sample  plugin.sh  settings  vtep-local.conf.sample
devstack/lib/: networking-ovn  octavia  ovn
devstack/provisioning/: setup-base.sh
devstack/upgrade/: resources.sh  settings  upgrade.sh
doc/: requirements.txt
doc/source/: conf.py  containers.rst  data_model.rst  deployment_integration_guide.rst  dpdk.rst  faq.rst  features.rst  index.rst  install.rst  installation.rst  refarch.rst  testing.rst  todo.rst  troubleshooting.rst  usage.rst
doc/source/admin/: containers.rst  dpdk.rst  faq.rst  features.rst  index.rst  loadbalancer.rst  ovn.rst  routing.rst  troubleshooting.rst  tutorial.rst
doc/source/configuration/: index.rst  networking_ovn_metadata_agent.rst
doc/source/contributor/: index.rst  testing.rst
doc/source/design/: data_model.rst  native_dhcp.rst  ovn_worker.rst
doc/source/faq/: index.rst
doc/source/figures/: ovn-architecture1.graffle  ovn-compute1.graffle  ovn-hw.graffle  ovn-services.graffle
doc/source/install/: index.rst  manual.rst  migration.rst  tripleo.rst
doc/source/refarch/: launch-instance-provider-network.rst  launch-instance-selfservice-network.rst  provider-networks.rst  refarch.rst  routers.rst  selfservice-networks.rst
etc/: metadata_agent.ini.sample  ovn.filters
etc/oslo-config-generator/: metadata_agent.ini  ml2_conf.ini  networking_ovn_metadata_agent.ini
migration/: migrate-to-ovn.yml
migration/infrared/tripleo-ovn-migration/: README.rst  main.yml
migration/tripleo_environment/: README.rst  network_mtu.py  ovn_migration.sh
migration/tripleo_environment/playbooks/: migrate.yml  ovn-migration.yml  post-migration.yml  pre-migration.yml  reduce-dhcp-renewal-time.yml  setup-ovn.yml
networking-ovn/locale/: networking-ovn.pot
networking_ovn/: __init__.py  _i18n.py  ovn_db_sync.py  ovn_nb_sync.py  plugin.py  security_groups_handler.py  version.py
networking_ovn/agent/: metadata_agent.py  neutron_agent.py  stats.py
networking_ovn/agent/metadata/: agent.py  driver.py  ovsdb.py  server.py
networking_ovn/cmd/: migration_mtu.py  neutron_ovn_db_sync_util.py
networking_ovn/common/: acl.py  config.py  constants.py  exceptions.py  extensions.py  hash_ring_manager.py  maintenance.py  ovn_client.py  utils.py
networking_ovn/db/: db.py  hash_ring.py  head.py  maintenance.py  models.py  revision.py
networking_ovn/journal/: cleanup.py  constants.py  exceptions.py  journal.py  maintenance.py
networking_ovn/l3/: l3_ovn.py  l3_ovn_admin_net.py  l3_ovn_scheduler.py
networking_ovn/locale/: networking_ovn.pot
networking_ovn/ml2/: mech_driver.py  ovn_nb_sync.py  qos_driver.py  trunk_driver.py
networking_ovn/neutron_lib/: _i18n.py  constants.py  exceptions.py  provisioning_blocks.py  sqlalchemytypes.py  standard_attr.py
networking_ovn/octavia/: ovn_driver.py
networking_ovn/ovsdb/: backports.py  commands.py  impl_idl_ovn.py  impl_nbctl.py  ovn_api.py  ovsdb_monitor.py  row_event.py  worker.py
networking_ovn/tests/: base.py  test_l3_ovn.py  test_networking_ovn.py  utils.py
playbooks/legacy/: tempest-post-common.yml
rally-jobs/: README.rst  ovn.yaml
releasenotes/notes/: SRIOV-port-binding-support-bug-1515005.yaml  add-agent-api-4f15364d04d28941.yaml  bug-1606458-b9f809b3914bb203.yaml  bug-817525-eef68687dafa97fd.yaml  distributed-fip-0f5915ef9fd00626.yaml  distributed-ovsdb-events-fb4e7d94d0a0bb87.yaml  fragmentation-support-2860870dc7b8bb6b.yaml  internal_dns_support-83737015a1019222.yaml  maintenance-thread-ee65c1ad317204c7.yaml  migration-from-ml2ovs-to-ovn-30ea4dea163d20c0.yaml  network-dns-domain-support-85dd1e20d9c432c6.yaml  networking-ovn-0df373f5a7b22d19.yaml  ovn-cms-options-enable-chassis-as-gw-3adc7024478e3efa.yaml  ovn-global-dhcp-options-6a23e6a3619bba78.yaml  ovn-native-nat-9bbc92f16edcf2f5.yaml  ovn-octavia-provider-driver-multiple-protocols-4a93e184b8f374c7.yaml  ovn-provider-driver-for-octavia-d5566ae6b114d6be.yaml  ovn_dhcpv6-729158d634aa280e.yaml  ovnmeta-namespaces-include-network-name-e6e4e5f6ff69e7ed.yaml  ovsdb-probe-interval-to-60-secs-cb4d3c5ec930f4a8.yaml  ovsdb-ssl-support-213ff378777cf946.yaml  ovsdb_connection-cef6b02c403163a3.yaml  support-QoS-by-meter-action-03bb9fa57e35e5bd.yaml  support-member-create-without-subnetid-0b4e3aa6ac453f28.yaml  virtual-ports-fe725a817ce45e6d.yaml  vlan-tenant-network-support-debccdc48316957d.yaml
releasenotes/source/: conf.py  index.rst  ocata.rst
tools/: check_unit_test_structure.sh  coding-checks.sh  configure_for_func_testing.sh  ostestr_compat_shim.sh  pip_install_src_modules.sh  pretty_tox.sh  subunit-trace.py  tox_install.sh
tripleo/: ovn.yml
vagrant/: README.rst  Vagrantfile
vagrant/provisioning/: boxes.yml  instances.yml  provider-setup.sh  providers.rb  setup-base.sh  setup-compute.sh  setup-controller.sh  setup-db.sh  setup-vtep.sh  virtualbox.conf.yml
vagrant/sparse/: README.rst  Vagrantfile
zuul.d/: legacy-networking-ovn-jobs.yaml  networkin-ovn-jobs.yaml  networkin-ovn-rally-task.yaml  networking-ovn-jobs.yaml  project.yaml
(+211 files in other folders)
