[metadata]
name = networking-ovn
version = 2015.1.1
summary = OpenStack Neutron integration with OVN
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    networking_ovn
data_files =
    etc/neutron/rootwrap.d =
        etc/ovn.filters

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
neutron.ml2.mechanism_drivers =
    ovn = networking_ovn.ml2.mech_driver:OVNMechDriver
neutron.service_plugins =
    ovn-router = networking_ovn.l3.l3_ovn.OVNL3RouterPlugin

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = networking_ovn/locale
domain = networking-ovn

[update_catalog]
domain = networking-ovn
output_dir = networking_ovn/locale
input_file = networking_ovn/locale/networking-ovn.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = networking_ovn/locale/networking-ovn.pot

[wheel]
universal = 1
