[metadata]
name = networking-ovn
summary = OpenStack Neutron integration with OVN
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://docs.openstack.org/developer/networking-ovn/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    networking_ovn

[global]
setup-hooks =
    pbr.hooks.setup_hook

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = networking_ovn/locale
domain = networking_ovn

[update_catalog]
domain = networking_ovn
output_dir = networking_ovn/locale
input_file = networking_ovn/locale/networking_ovn.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = networking_ovn/locale/networking_ovn.pot

[wheel]
universal = 1

[entry_points]
console_scripts =
    neutron-ovn-db-sync-util = networking_ovn.cmd.neutron_ovn_db_sync_util:main
oslo.config.opts =
    networking_ovn = networking_ovn.common.config:list_opts
neutron.ml2.mechanism_drivers =
    ovn = networking_ovn.ml2.mech_driver:OVNMechanismDriver
    ovn-sync = networking_ovn.cmd.neutron_ovn_db_sync_util:OVNMechanismDriver
neutron.service_plugins =
    ovn-router = networking_ovn.l3.l3_ovn:OVNL3RouterPlugin
neutron.qos.notification_drivers =
    ovn-qos = networking_ovn.ml2.qos_driver:OVNQosNotificationDriver

[pbr]
warnerrors = true
